--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,9 +5,11 @@ LABEL description="bt-search-docker"
 MAINTAINER ecat
 
 # 环境变量配置
+ENV TZ=America/Los_Angeles
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 ENV www_root /srv/www
 ENV www_name bt-search
-ENV git_repo "https://github.com/ecator/bt-search.git"
+ENV git_repo "https://github.com/oxniu/bt-search.git"
 
 ENV php_ini /etc/php/7.2/fpm/php.ini
 ENV nginx_ini /etc/nginx/nginx.conf
@@ -15,6 +17,7 @@ ENV nginx_bt /etc/nginx/sites-enabled/bt-search.conf
 
 # 软件环境安装
 RUN apt-get update \
+	&& apt-get install -y software-properties-common && add-apt-repository ppa:ondrej/php \
 	&& apt-get install -y git nginx php php-curl php-xml composer nodejs npm \
 	&& rm -rf /var/lib/apt/lists/*
 
