--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ ENV nginx_bt /etc/nginx/sites-enabled/bt-search.conf
 RUN apt-get update \
 	&& apt-get install -y software-properties-common && add-apt-repository ppa:ondrej/php \
 	&& apt-get update \
-	&& apt-get install -y git nginx php php-fpm php-curl php-xml php-gd composer nodejs npm #\
+	&& apt-get install -y git nginx php7.2* php-fpm php-curl php-xml php-gd composer nodejs npm #\
 	#&& rm -rf /var/lib/apt/lists/*
 
 RUN npm install -g bower \
