--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ ENV nginx_bt /etc/nginx/sites-enabled/bt-search.conf
 RUN apt-get update \
 	&& apt-get install -y software-properties-common && add-apt-repository ppa:ondrej/php \
 	&& apt-get update \
-	&& apt-get install -y git nginx php7.0 php7.0-common php7.0-fpm php7.0-curl php7.0-xml php7.0-gd composer nodejs npm php7.2 php7.2-fpm php7.2-common php7.2-curl php7.2-xml php-curl php-xml #\
+	&& apt-get install -y git nginx php7.0 php7.0-common php7.0-fpm php7.0-curl php7.0-xml php7.0-gd composer nodejs npm #\
 	#&& rm -rf /var/lib/apt/lists/*
 
 RUN npm install -g bower \
